--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
         <dependency>
             <groupId>org.springframework.ws</groupId>
             <artifactId>spring-ws-core</artifactId>
-            <version>2.0.0-M1</version>
+            <version>3.0.4.RELEASE</version>
         </dependency>
 
         <dependency>
